--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header"); -%>
 
-  <h1><%=title%></h1>
-  <p><%=content%></p>
+  <h1><%=thispost.title%></h1>
+  <p><%=thispost.content%></p>
 
 <%- include("partials/footer"); -%>
