--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,8 +5,13 @@
   <meta charset="utf-8">
   <title>Daily Journal</title>
   <meta charset="utf-8">
+  <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
+   
+  <!-- Font Awesomne -->
+   <script src="https://kit.fontawesome.com/fd078d039f.js" crossorigin="anonymous"></script>
+   
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
